refactor: 찜 상품 경배방 시작시 통합 알림으로 변경